<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormActivity"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Contacts"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_menu_24"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                tools:ignore="UnusedAttribute"
        />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_margin="20dp" android:paddingBottom="20dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_person_24"
                        android:id="@+id/iconPerson"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_phone_24"
                        android:id="@+id/iconPhone"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfPhone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="4"
                        android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                    />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfArea"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_weight="4">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                    />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_location_24"
                        android:id="@+id/iconLocation"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfAddress"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iconCity"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfCity"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/iconState"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfState"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_weight="4"
                        android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                    />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfZip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfZip"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="4">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_mail_24"
                        android:id="@+id/iconMail"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_cake_24"
                        android:id="@+id/iconCke"
                        android:layout_weight="6"
                        android:layout_marginEnd="10dp"/>
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tfBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tfBirthday"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_today_24"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>